Criando o projeto com Vue js

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,31 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <!-- Add the icon -->
+    <link rel="icon" href="../assets/icons/bikeFav.png" type="image/x-icon">
+      
+    <!-- Icons -->
+    <!-- <script  src="/src/assets/fontawesome.js" crossorigin="anonymous"></script> -->
+
+
+
+    <!-- jQuery -->
+    <!-- <script src="/src/assets/jquery/jquery-3.6.3.min.js"></script> -->
+
+
+    <!-- SweetAlert -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.min.css" rel="stylesheet">
+
+    <!-- Css -->
+    <!-- <link href="../src/scss/styleTeste.scss" rel="stylesheet/scss" type="text/css"> -->
+    <!-- <link rel="stylesheet" href="../src/scss/style.css" /> -->
+    <!-- <link rel="stylesheet" href="../css/auth.css" /> -->
+
+    <!-- Service Worker -->
+    <!-- <script>navigator.serviceWorker.register("../service-worker.js")</script>  -->
+    <!-- <link rel="manifest" href="../manifest.json" />
+    <title>BikeStop</title> -->
   </head>
   <body>
     <noscript>
@@ -13,5 +38,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
   </body>
 </html>
