--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title = "BikeStop"%></title>
 
     <!-- Add the icon -->
-    <link rel="icon" href="./favIcon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     
     <!-- Service Worker -->
     <!-- <script>navigator.serviceWorker.register("../service-worker.js")</script>  -->
